--- a/GetGarcard.html
+++ b/GetGarcard.html
@@ -16,16 +16,15 @@
 <div id="box">
     <img src="img/GetcardTitle.png" alt="" class="title">
     <div class="RuleBox">
-        <p>
-            填写正确车牌号即可获得一次</p><p class="free">
-        免费</p><p>
-        加油</p><p class="price">
-        20</p><p>
-        元的体验资格</p>
+        <p>填写正确车牌号即可获得一次
+        <p class="free">免费
+        <p>加油
+        <p class="price">20
+        <p>元的体验资格</p>
     </div>
     <div class="InfoOccupy"></div>
     <div class="InfoBox">
-        <div class="SurplusQuota">仅剩300名</div>
+        <div class="SurplusQuota">仅剩1000张</div>
         <div id="select">
             <div class="checkBox">
                 <span class="checkspan" data="0">车辆类型</span>
