--- a/GetGarcard.html
+++ b/GetGarcard.html
@@ -16,11 +16,11 @@
 <div id="box">
     <img src="img/GetcardTitle.png" alt="" class="title">
     <div class="RuleBox">
-        <p>填写正确车牌号即可获得一次
-        <p class="free">免费
-        <p>加油
-        <p class="price">20
-        <p>元的体验资格</p>
+        <li>填写正确车牌号即可获得一次
+        <li class="free">免费
+        <li>加油
+        <li class="price">20
+        <li>元的体验资格</li>
     </div>
     <div class="InfoOccupy"></div>
     <div class="InfoBox">
