--- a/GetGarcard.html
+++ b/GetGarcard.html
@@ -87,7 +87,7 @@
         <img src="img/prompt.png" alt="">
     </div>
     <div class="pro-middle">
-        <p class="ProTilet">请选择车辆类型</p>
+        <p class="ProTilet"></p>
     </div>
 </div>
 <!--提示框结束-->
