--- a/index.html
+++ b/index.html
@@ -6,8 +6,43 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <script src="http://cdn.bootcss.com/jquery/1.8.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://cdn.bootcss.com/jquery.qrcode/1.0/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
+
+
 </head>
 <body>
-<img src="https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket=gQEZ8TwAAAAAAAAAAS5odHRwOi8vd2VpeGluLnFxLmNvbS9xLzAyZFJxYVpiTDRkNGgxMDAwMHcwNzEAAgRTwdxcAwQAAAAA" alt="">
+
+<div id="qrDiv">
+    <!--<img src="https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket=gQEZ8TwAAAAAAAAAAS5odHRwOi8vd2VpeGluLnFxLmNvbS9xLzAyZFJxYVpiTDRkNGgxMDAwMHcwNzEAAgRTwdxcAwQAAAAA" alt="">-->
+</div>
+
+
 </body>
+
+<script type="text/javascript">
+    $("#qrDiv").qrcode({
+        width: 120, //宽度
+        height:120, //高度
+        text: "需要生成的二维码内容" //任意内容
+    });
+
+    //从 canvas 提取图片 image
+    function convertCanvasToImage(canvas) {
+        //新Image对象，可以理解为DOM
+        var image = new Image();
+        // canvas.toDataURL 返回的是一串Base64编码的URL，当然,浏览器自己肯定支持
+        // 指定格式 PNG
+        image.src = canvas.toDataURL("image/png");
+        return image;
+    }
+
+    //获取网页中的canvas对象
+    var mycanvas1=document.getElementsByTagName('canvas')[0];
+    //将转换后的img标签插入到html中
+    var img=convertCanvasToImage(mycanvas1);
+    $('#imagQrDiv').append(img);//imagQrDiv表示你要插入的容器id
+</script>
+
 </html>
