--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+
+    <script src="http://cdn.bootcss.com/jquery/1.8.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://cdn.bootcss.com/jquery.qrcode/1.0/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
+
+
 </head>
 <body>
 
-<div id="qrDiv">
-    <img src="https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket=gQEZ8TwAAAAAAAAAAS5odHRwOi8vd2VpeGluLnFxLmNvbS9xLzAyZFJxYVpiTDRkNGgxMDAwMHcwNzEAAgRTwdxcAwQAAAAA" alt="">
-</div>
+<!--<div id="qrDiv">-->
+    <img src="http://lsh.longshihua.cn/123.jpg" alt="">
+<!--</div>-->
 
 
 </body>
