--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
 
 <!--<div id="qrDiv">-->
-    <img src="http://lsh.longshihua.cn/123.jpg" alt="">
+<img src="img/GarcardBg.png" alt="" class="bg">
+<img src="http://lsh.longshihua.cn/123.jpg" alt="" class="code">
 <!--</div>-->
 
 
@@ -24,3 +25,20 @@
 
 
 </html>
+
+<style>
+    .bg{
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+    .code{
+        width: 30%;
+        height: 30%;
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+</style>
