--- a/index.html
+++ b/index.html
@@ -5,40 +5,39 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
+    <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate">
+    <meta HTTP-EQUIV="expires" CONTENT="0">
+    <title>关注公众号</title>
 
-
-    <script src="http://cdn.bootcss.com/jquery/1.8.3/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="http://cdn.bootcss.com/jquery.qrcode/1.0/jquery.qrcode.min.js" type="text/javascript" charset="utf-8"></script>
-
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 <body>
-
-<!--<div id="qrDiv">-->
-<img src="img/GarcardBg.png" alt="" class="bg">
-<img src="http://lsh.longshihua.cn/123.jpg" alt="" class="code">
-<!--</div>-->
-
+<div id="body">
+    <div class="bgbox">
+        <img src="img/codebg.png" alt="" class="bg">
+    </div>
+    <div class="title">
+        <p>欢迎关注</p>
+        <p>龙石化奥硕加油站</p>
+    </div>
+    <div class="codebox">
+        <img src="http://lsh.longshihua.cn/123.jpg" alt="" class="code">
+    </div>
+    <div class="Info">
+        <div class="address">
+            <img src="img/address.png" alt="">
+            <span class="InfoTxt">五华区人民西路681222222222222222222222222222222号</span>
+        </div>
+        <div class="phone">
+            <img src="img/phone.png" alt="">
+            <span class="InfoTxt">68325372</span>
+        </div>
+    </div>
+</div>
 
 </body>
 
 
 </html>
-
-<style>
-    .bg{
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-    }
-    .code{
-        width: 30%;
-        height: 30%;
-        position: relative;
-        top: 0;
-        left: 0;
-    }
-</style>
