--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="Info">
         <div class="address">
             <img src="img/address.png" alt="">
-            <span class="InfoTxt">五华区人民西路681222222222222222222222222222222号</span>
+            <span class="InfoTxt">北京市海淀区西北旺大牛股社区一期</span>
         </div>
         <div class="phone">
             <img src="img/phone.png" alt="">
