--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
     <div class="bgbox">
         <img src="img/codebg.png" alt="" class="bg">
     </div>
-    <div class="title">
-        <p>欢迎关注</p>
-        <p>龙石化奥硕加油站</p>
-    </div>
-    <div class="codebox">
-        <img src="http://lsh.longshihua.cn/123.jpg" alt="" class="code">
-    </div>
-    <div class="Info">
-        <div class="address">
-            <img src="img/address.png" alt="">
-            <span class="InfoTxt">北京市海淀区西北旺大牛股社区一期</span>
+    <div class="con">
+        <div class="title">
+            <p>欢迎关注</p>
+            <p>龙石化奥硕加油站</p>
         </div>
-        <div class="phone">
-            <img src="img/phone.png" alt="">
-            <span class="InfoTxt">68325372</span>
+        <div class="codebox">
+            <img src="http://lsh.longshihua.cn/123.jpg" alt="" class="code">
+        </div>
+        <div class="Info">
+            <div class="address">
+                <img src="img/address.png" alt="">
+                <span class="InfoTxt">北京市海淀区西北旺大牛股社区一期</span>
+            </div>
+            <div class="phone">
+                <img src="img/phone.png" alt="">
+                <span class="InfoTxt">68325372</span>
+            </div>
         </div>
     </div>
 </div>
