--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="Info">
             <div class="address">
                 <img src="img/address.png" alt="">
-                <span class="InfoTxt">北京市海淀区西北旺大牛股社区一期</span>
+                <span class="InfoTxt">北京市海淀区西北旺大牛坊社区一期</span>
             </div>
             <div class="phone">
                 <img src="img/phone.png" alt="">
