--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="codebox">
             <img src="http://lsh.longshihua.cn/123.jpg" alt="" class="code">
         </div>
-    <div class="Info">
+    <!--<div class="Info">
             <div class="address">
                 <img src="img/address.png" alt="">
                 <span class="InfoTxt">北京市海淀区西北旺大牛坊社区一期</span>
@@ -34,7 +34,7 @@
                 <img src="img/phone.png" alt="">
                 <span class="InfoTxt">68325372</span>
             </div>
-        </div>
+        </div>-->
 </div>
 
 </body>
